sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/README.md
# client library samples for JavaScript

These sample programs show how to use the JavaScript client libraries for in some common scenarios.

| **File Name**                                                                                                           | **Description**                                                                                                                                                                                                                                                                          |
| ----------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [configurationStoresCreateSample.js][configurationstorescreatesample]                                                   | Creates a configuration store with the specified parameters. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresCreate.json                                                                    |
| [configurationStoresDeleteSample.js][configurationstoresdeletesample]                                                   | Deletes a configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresDelete.json                                                                                                  |
| [configurationStoresGetDeletedSample.js][configurationstoresgetdeletedsample]                                           | Gets a deleted Azure app configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/DeletedConfigurationStoresGet.json                                                                               |
| [configurationStoresGetSample.js][configurationstoresgetsample]                                                         | Gets the properties of the specified configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresGet.json                                                                          |
| [configurationStoresListByResourceGroupSample.js][configurationstoreslistbyresourcegroupsample]                         | Lists the configuration stores for a given resource group. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresListByResourceGroup.json                                                         |
| [configurationStoresListDeletedSample.js][configurationstoreslistdeletedsample]                                         | Gets information about the deleted configuration stores in a subscription. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/DeletedConfigurationStoresList.json                                                 |
| [configurationStoresListKeysSample.js][configurationstoreslistkeyssample]                                               | Lists the access key for the specified configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresListKeys.json                                                                   |
| [configurationStoresListSample.js][configurationstoreslistsample]                                                       | Lists the configuration stores for a given subscription. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresList.json                                                                          |
| [configurationStoresPurgeDeletedSample.js][configurationstorespurgedeletedsample]                                       | Permanently deletes the specified configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/DeletedConfigurationStoresPurge.json                                                                    |
| [configurationStoresRegenerateKeySample.js][configurationstoresregeneratekeysample]                                     | Regenerates an access key for the specified configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresRegenerateKey.json                                                         |
| [configurationStoresUpdateSample.js][configurationstoresupdatesample]                                                   | Updates a configuration store with the specified parameters. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresUpdate.json                                                                    |
| [keyValuesCreateOrUpdateSample.js][keyvaluescreateorupdatesample]                                                       | Creates a key-value. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresCreateKeyValue.json                                                                                                    |
| [keyValuesDeleteSample.js][keyvaluesdeletesample]                                                                       | Deletes a key-value. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresDeleteKeyValue.json                                                                                                    |
| [keyValuesGetSample.js][keyvaluesgetsample]                                                                             | Gets the properties of the specified key-value. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresGetKeyValue.json                                                                            |
| [keyValuesListByConfigurationStoreSample.js][keyvalueslistbyconfigurationstoresample]                                   | Lists the key-values for a given configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresListKeyValues.json                                                                    |
| [operationsCheckNameAvailabilitySample.js][operationschecknameavailabilitysample]                                       | Checks whether the configuration store name is available for use. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/CheckNameAvailable.json                                                                      |
| [operationsRegionalCheckNameAvailabilitySample.js][operationsregionalchecknameavailabilitysample]                       | Checks whether the configuration store name is available for use. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/RegionalCheckNameAvailable.json                                                              |
| [privateEndpointConnectionsCreateOrUpdateSample.js][privateendpointconnectionscreateorupdatesample]                     | Update the state of the specified private endpoint connection associated with the configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresCreatePrivateEndpointConnection.json |
| [privateEndpointConnectionsDeleteSample.js][privateendpointconnectionsdeletesample]                                     | Deletes a private endpoint connection. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresDeletePrivateEndpointConnection.json                                                                 |
| [privateEndpointConnectionsGetSample.js][privateendpointconnectionsgetsample]                                           | Gets the specified private endpoint connection associated with the configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresGetPrivateEndpointConnection.json                   |
| [privateEndpointConnectionsListByConfigurationStoreSample.js][privateendpointconnectionslistbyconfigurationstoresample] | Lists all private endpoint connections for a configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/ConfigurationStoresListPrivateEndpointConnections.json                                       |
| [privateLinkResourcesGetSample.js][privatelinkresourcesgetsample]                                                       | Gets a private link resource that need to be created for a configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/PrivateLinkResourceGet.json                                                    |
| [privateLinkResourcesListByConfigurationStoreSample.js][privatelinkresourceslistbyconfigurationstoresample]             | Gets the private link resources that need to be created for a configuration store. x-ms-original-file: specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/stable/2022-05-01/examples/PrivateLinkResourcesListByConfigurationStore.json                           |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

3. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node configurationStoresCreateSample.js
```

Alternatively, run a single sample with the correct environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env  node configurationStoresCreateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[configurationstorescreatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresCreateSample.js
[configurationstoresdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresDeleteSample.js
[configurationstoresgetdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresGetDeletedSample.js
[configurationstoresgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresGetSample.js
[configurationstoreslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresListByResourceGroupSample.js
[configurationstoreslistdeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresListDeletedSample.js
[configurationstoreslistkeyssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresListKeysSample.js
[configurationstoreslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresListSample.js
[configurationstorespurgedeletedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresPurgeDeletedSample.js
[configurationstoresregeneratekeysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresRegenerateKeySample.js
[configurationstoresupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/configurationStoresUpdateSample.js
[keyvaluescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/keyValuesCreateOrUpdateSample.js
[keyvaluesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/keyValuesDeleteSample.js
[keyvaluesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/keyValuesGetSample.js
[keyvalueslistbyconfigurationstoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/keyValuesListByConfigurationStoreSample.js
[operationschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/operationsCheckNameAvailabilitySample.js
[operationsregionalchecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/operationsRegionalCheckNameAvailabilitySample.js
[privateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/privateEndpointConnectionsCreateOrUpdateSample.js
[privateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/privateEndpointConnectionsDeleteSample.js
[privateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/privateEndpointConnectionsGetSample.js
[privateendpointconnectionslistbyconfigurationstoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/privateEndpointConnectionsListByConfigurationStoreSample.js
[privatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/privateLinkResourcesGetSample.js
[privatelinkresourceslistbyconfigurationstoresample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appconfiguration/arm-appconfiguration/samples/v3/javascript/privateLinkResourcesListByConfigurationStoreSample.js
[apiref]: https://docs.microsoft.com/javascript/api/@azure/arm-appconfiguration?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/appconfiguration/arm-appconfiguration/README.md
